# yulong-vpn-windows

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-exe.yml
docs/: BUILD_WINDOWS.md  HANDOFF.md  PRD.md  RELEASE_CHECK.md
scripts/: create_windows_icon.py  download_geodata.ps1  download_mihomo.ps1
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
