[package]
name = "yulong-vpn-windows"
version = "1.0.2"
description = "Yulong VPN Windows Client"
authors = ["Yulong VPN"]
edition = "2021"

[lib]
name = "yulong_vpn_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
once_cell = "1"
